--- a/TD2/config/conf.ini
+++ b/TD2/config/conf.ini
@@ -1,6 +1,8 @@
 driver=mysql
 username=root
+password=root
 host=localhost
 database=gamepedia
 charset=utf8mb4
 collation=utf8mb4_general_ci
+port=8889
